# floodmapping_dl

./: .gitignore  .pre-commit-config.yaml  README.md  http_cache.sqlite  pyproject.toml  requirements.txt
notebooks/: make_data.ipynb  test_1.ipynb  test_2.ipynb
notebooks/lightning_logs/version_0/: events.out.tfevents.1712015791.NissimPC
notebooks/lightning_logs/version_1/: events.out.tfevents.1712015825.NissimPC
notebooks/lightning_logs/version_2/: events.out.tfevents.1712015902.NissimPC
notebooks/lightning_logs/version_3/: events.out.tfevents.1712015930.NissimPC
notebooks/lightning_logs/version_4/: events.out.tfevents.1712015943.NissimPC
notebooks/lightning_logs/version_5/: events.out.tfevents.1712016453.NissimPC
notebooks/lightning_logs/version_6/: events.out.tfevents.1712016478.NissimPC
scratch/: pyproject.toml
scripts/core/: http_cache.sqlite  main.py
scripts/core/utils/: export_and_monitor.py  filter_emdat copy.py  filter_emdat.py  make_chips.py  make_raw_dat.py  monitor_tasks.py  process_chips.py  pygeoboundaries.py  write_to_cloud.py
