[tool.poetry]
name = "floodmapping-dl"
version = "0.1.0"
description = "Deep learning based flood mapping for Costa Rica using Google Earth Engine and TorchGeo"
authors = ["Nissim Lebovits <nissimlebovits@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"  # Specify the desired Python version here
ipykernel = "^6.27.1"
gdown = "^4.7.1"
folium = "^0.15.1"
pyproj = "^3.6.1"
rio-cogeo = "^5.1.1"
earthengine-api = "^0.1.388"
openpyxl = "^3.1.2"
pygeoboundaries = "^0.0.2"
geopandas = "^0.14.3"
geojson = "^3.1.0"
requests-cache = "^1.1.1"
colorcet = "^3.0.1"
matplotlib = "^3.8.2"
holoviews = "^1.18.2"
xarray = "^2024.1.1"
xee = "^0.0.8"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.0"
pretty-errors = "^1.2.25"
black = "^24.3.0"
pre-commit = "^3.6.2"
scikit-learn = "^1.4.1.post1"
isort = "^5.13.2"
torchgeo = "^0.5.2"
python-dotenv = "^1.0.1"
restee = "^0.0.3"
geemap = "^0.32.0"
np = "^1.0.2"
rasterio = "^1.3.9"
lightning = "^2.2.1"
torch = "^2.2.2"
torchvision = "^0.17.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/"
